Use libsched as provided by libport.
	* src/scheduler/coroutine.hh: Remove.
	* src/scheduler/coroutine.hxx: Remove.
	* src/scheduler/exception.hh: Remove.
	* src/scheduler/exception.hxx: Remove.
	* src/scheduler/fwd.hh: Remove.
	* src/scheduler/job.cc: Remove.
	* src/scheduler/job.hh: Remove.
	* src/scheduler/job.hxx: Remove.
	* src/scheduler/libcoroutine/Base.h: Remove.
	* src/scheduler/libcoroutine/Common.h: Remove.
	* src/scheduler/libcoroutine/Coro.c: Remove.
	* src/scheduler/libcoroutine/Coro.cc: Remove.
	* src/scheduler/libcoroutine/Coro.h: Remove.
	* src/scheduler/libcoroutine/PortableUContext.c: Remove.
	* src/scheduler/libcoroutine/PortableUContext.h: Remove.
	* src/scheduler/libcoroutine/PortableUContext386.h: Remove.
	* src/scheduler/libcoroutine/PortableUContextPPC.h: Remove.
	* src/scheduler/libcoroutine/PortableUContext_asm.S: Remove.
	* src/scheduler/libcoroutine/local.mk: Remove.
	* src/scheduler/local.mk: Remove.
	* src/scheduler/pthread-coro.cc: Remove.
	* src/scheduler/pthread-coro.hh: Remove.
	* src/scheduler/pthread-coro.hxx: Remove.
	* src/scheduler/scheduler.cc: Remove.
	* src/scheduler/scheduler.hh: Remove.
	* src/scheduler/scheduler.hxx: Remove.
	* src/scheduler/tag.cc: Remove.
	* src/scheduler/tag.hh: Remove.
	* src/scheduler/tag.hxx: Remove.
	* src/scheduler/testcoro.cc: Remove.

	* externals/sdk-remote: Update.
	* tests: Ditto.

	* Makefile.am, configure.ac, externals/bootstrap.cfg: Adjust.

	* src/console-server.cc, src/kernel/userver.cc,
	* src/object/semaphore.cc, src/object/semaphore.hh,
	* src/object/tag.cc, src/object/tag.hh, src/object/task.hh,
	* src/object/urbi-exception.hh, src/rewrite/pattern-binder.cc,
	* src/runner/at-handler.cc, src/runner/interpreter-visit.hxx,
	* src/runner/interpreter.cc, src/runner/raise.cc,
	* src/runner/runner.hh, src/runner/shell.cc, src/runner/sneaker.hh:
	Adjust paths.

--- a/configure.ac
+++ b/configure.ac
@@ -9,7 +9,7 @@ URBI_PACKAGE_VERSION
 # FIXME: Disable the generation of CPP symbols defining the current
 # version, as it is unclear what it should be.
 # URBI_KERNEL_VERSION
-URBI_PACKAGE_COPYRIGHT([Gostai SAS], [2005-2008])
+URBI_PACKAGE_COPYRIGHT([Gostai SAS], [2005-2009])
 
 # Libtoolize needs to see this invocation...
 AC_CONFIG_AUX_DIR([build-aux])
@@ -61,6 +61,7 @@ TC_CXX_WARNINGS([[-Wcast-align],
 		 [-Wbad-function-cast],
 		 [-Wmissing-declarations]])
 
+# We compile libsched.
 AM_PROG_AS
 
 # Disable static libraries. Loading modules as shared libraries
