--- a/externals/bootstrap.cfg
+++ b/externals/bootstrap.cfg
@@ -1,9 +1,16 @@
+# SDK Remote.
 external: externals/sdk-remote -> sdk-remote
 link: sdk-remote         -> externals/sdk-remote
 
 link: build-aux          -> externals/sdk-remote/externals/libport/build-aux
 link: lib/network/bsdnet -> externals/sdk-remote/externals/libport/network/bsdnet
 
+# Sched.
+link: src/include/sched -> externals/sdk-remote/externals/libport/include/sched
+link: src/lib/sched -> externals/sdk-remote/externals/libport/lib/sched
+
+
+# Tests.
 external: tests -> urbivalid
 external: bison -> bison
 subpackage: bison
