Do not differentiate closed and non-closed varibles.
Targets will soon be closed over too. Thus, non-closed variables would be local
variables that are not passed as argument and not target of any messages. I.e.,
so pathological that optimizing this case is a waste of ressources.

	* src/runner/stacks.cc,
	* src/runner/stacks.hh,
	* src/ast/ast.yml,
	* src/binder/binder.cc: Remove closed-related code.
	* src/runner/interpreter-apply.cc: Adapt.
	* src/runner/stack-debug.hh: Fix include path.

--- a/src/ast/ast.yml
+++ b/src/ast/ast.yml
@@ -902,7 +902,7 @@ Routine:
         type: unsigned
         init: '0'
         access: rW
-    - closed_size:
+    - captured_size:
         type: unsigned
         init: '0'
         access: rW
@@ -968,12 +968,6 @@ LocalWrite:
 
 LocalDeclaration:
   super: LocalWrite
-  attributes:
-    - closed:
-        type: 'bool'
-        desc: Whether this variable is closed-over by a subcontext
-        access: rW
-        init: 'false'
   printer:
     - '"var "'
     - $what
@@ -999,14 +993,8 @@ LocalAssignment:
   inline:
     header inside: |2
       public:
-        bool closed_get() const;
         unsigned local_index_get() const;
     impl inside: |2
-      bool LocalAssignment::closed_get() const
-      {
-        assert(declaration_);
-        return declaration_->closed_get();
-      }
       unsigned LocalAssignment::local_index_get() const
       {
         assert(declaration_);
@@ -1083,14 +1071,8 @@ Local:
   inline:
     header inside: |2
       public:
-        bool closed_get() const;
         unsigned local_index_get() const;
     impl inside: |2
-      bool Local::closed_get() const
-      {
-        assert(declaration_);
-        return declaration_->closed_get();
-      }
       unsigned Local::local_index_get() const
       {
         assert(declaration_);
