--- a/externals/bootstrap.cfg
+++ b/externals/bootstrap.cfg
@@ -1,19 +1,26 @@
 # SDK Remote.
+subpackage: externals/sdk-remote
 external: externals/sdk-remote -> sdk-remote
 link: sdk-remote         -> externals/sdk-remote
 
-link: build-aux          -> externals/sdk-remote/externals/libport/build-aux
-link: lib/network/bsdnet -> externals/sdk-remote/externals/libport/network/bsdnet
+# Libport.
+link: build-aux          -> sdk-remote/externals/libport/build-aux
+
+# Network
+link: src/lib/network/bsdnet -> sdk-remote/externals/libport/network/bsdnet
 
 # Sched.
-link: src/include/sched -> externals/sdk-remote/externals/libport/include/sched
-link: src/lib/sched -> externals/sdk-remote/externals/libport/lib/sched
+link: src/include/sched -> sdk-remote/externals/libport/include/sched
+link: src/lib/sched -> sdk-remote/externals/libport/lib/sched
 
+# Libltdl
+link: src/include/libltdl -> sdk-remote/libltdl
 
 # Tests.
 external: tests -> urbivalid
 external: bison -> bison
+
+# Bison.
 subpackage: bison
-subpackage: externals/sdk-remote
 
 keep: INSTALL
