Adapt the "->" syntax to the new properties system.
	* src/ast/ast.yml: Add specific nodes for properties read/write.
	* src/rewrite/desugarer.cc,
	* src/rewrite/desugarer.hh: Do not desugar properties, let the runner
	handle them.
	* src/runner/interpreter-visit.hxx: Handle them.

--- a/src/ast/.gitignore
+++ b/src/ast/.gitignore
@@ -160,6 +160,12 @@ pipe.hxx
 pretty-printer.cc
 pretty-printer.hh
 pretty-printer.stamp
+property-action.cc
+property-action.hh
+property-action.hxx
+property-write.cc
+property-write.hh
+property-write.hxx
 property.cc
 property.hh
 property.hxx
