Convert the documentation into a genuine chk test suite.
tex2chk converts the TeX files into a chk hierarchy.

	* doc/tex2chk: New.
	* doc/Makefile.am: Include the following file.
	* doc/tests/local.mk: New, most of it is extracted from...
	* doc/specs/local.mk: here.
	* doc/check.py: Remove.
	* doc/specs/URBI.INI: Rename as...
	* doc/tests/test.u: this.
	Adjust.
	* .gitignore: Adjust.

--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -11,12 +11,12 @@ pdf_DATA =
 
 include specs/local.mk
 include tutorial/local.mk
+include tests/local.mk
 
 CLEANFILES += $(pdf_DATA)
 
 view: $(pdf_DATA)
 	xpdf $<
-
 
 # Once these works properly, will be moved into share/ to complete the
 # svn-only version.
