Factor the LaTeX style bw specs and tutorial.
	* doc/specs/urbi-specs.sty: Rename as...
	* doc/urbi-report.sty: this.
	* doc/Makefile.am (TEXI2DVI_FLAGS): Adjust to find it.
	* doc/specs/urbi-specs.tex: Adjust.
	* doc/tutorial/urbi-tutorial.tex: Remove all the duplication,
	rather, use urbi-report.sty.
	* doc/specs/local.mk, doc/tutorial/local.mk: Adjust dependencies.

--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -6,7 +6,8 @@ share_dir = $(srcdir)/document-aux
 share_bin_dir = $(share_dir)/bin
 share_make_dir = $(share_dir)/make
 include document-aux/make/tex.mk
-
+# Find urbi-report.sty.
+TEXI2DVI_FLAGS += -I $(srcdir)
 pdf_DATA =
 
 include specs/local.mk
