Fix libtool archive files.
	* Makefile.am: Include fix-libtool-la.mk.

--- a/sdk-remote/Makefile.am
+++ b/sdk-remote/Makefile.am
@@ -1,5 +1,6 @@
 include build-aux/init.mk
 include build-aux/build-aux.mk
+include build-aux/fix-libtool-la.mk
 AUTOMAKE_OPTIONS += subdir-objects
 ACLOCAL_AMFLAGS = -I build-aux -I sdk
 
