--- a/Makefile.am
+++ b/Makefile.am
@@ -1,4 +1,5 @@
 include build-aux/init.mk
+include build-aux/package-version.mk
 include build-aux/build-aux.mk
 
 ACLOCAL_AMFLAGS = -I build-aux -I tests/m4
