Use libport as a subpackage.
	* externals/libport: Move to...
	* libport: there
	* .gitmodules, externals/bootstrap.cfg, bootstrap: Adjust.
	* Makefile.am: SUBDIR into it.
	* configure.ac: Ditto.
	* include/local.mk: No longer include libport Makefiles.
	* src/Makefile.am (AM_CPPFLAGS): Adjust to find libport headers in
	the libport package.
	* src/tests/bin/wrapper.in: Ditto.

--- a/sdk-remote/.gitmodules
+++ b/sdk-remote/.gitmodules
@@ -1,5 +1,5 @@
-[submodule "externals/libport"]
-	path = externals/libport
+[submodule "libport"]
+	path = libport
 	url = git@core.gostai.com:libport.git
 [submodule "externals/libjpeg-6b"]
 	path = externals/libjpeg-6b
