--- a/sdk-remote/externals/bootstrap.cfg
+++ b/sdk-remote/externals/bootstrap.cfg
@@ -1,14 +1,8 @@
 # Libport.
-external: externals/libport -> libport
-link: build-aux -> externals/libport/build-aux
+subpackage: libport
+link: build-aux -> libport/build-aux
 
-link: include/libport    -> externals/libport/include/libport
-link: lib/libport        -> externals/libport/lib/libport
-
-# link: include/sched -> externals/libport/include/sched
-# link: lib/sched     -> externals/libport/lib/sched
-
-link: libltdl  -> externals/libport/libltdl
+link: libltdl  -> libport/libltdl
 
 # Libjpeg.
 external: externals/libjpeg-6b -> jpeg-6b
