Move jpeg-6b to its proper place.
	* externals/libjpeg-6b: Rename as...
	* jpeg: this.
	* .gitignore, .gitmodules, Makefile.am, configure.ac,
	* src/Makefile.am, src/liburbi/uconversion.cc: Adjust.

--- a/sdk-remote/.gitmodules
+++ b/sdk-remote/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "libport"]
 	path = libport
 	url = git@core.gostai.com:libport.git
-[submodule "externals/libjpeg-6b"]
-	path = externals/libjpeg-6b
+[submodule "jpeg"]
+	path = jpeg
 	url = git@core.gostai.com:libjpeg-6b.git
