--- a/sdk-remote/externals/bootstrap.cfg
+++ b/sdk-remote/externals/bootstrap.cfg
@@ -3,6 +3,4 @@ subpackage: libport
 link: build-aux -> libport/build-aux
 
 # Libjpeg.
-external: externals/libjpeg-6b -> jpeg-6b
-link: jpeg-6b -> externals/libjpeg-6b
-subpackage: externals/libjpeg-6b
+subpackage: jpeg
