--- a/sdk-remote/src/Makefile.am
+++ b/sdk-remote/src/Makefile.am
@@ -7,18 +7,24 @@ if BINDINGS
  SUBDIRS += swig
 endif
 
+# libltdl.
 LTDL_LIBS = $(top_builddir)/libport/libltdl/libltdlc.la
 LTDL_CPPFLAGS = -I$(top_srcdir)/libport -I$(top_builddir)/libport
 
+# libport.
 LIBPORT_CPPFLAGS =				\
   -I$(top_srcdir)/libport/include		\
   -I$(top_builddir)/libport/include
+LIBPORT_LIBS =						\
+  $(top_builddir)/libport/lib/libport/libport.la
 
-JPEG6B_CPPFLAGS = -I$(top_srcdir) -I$(top_builddir)/jpeg-6b
+# libjpeg.
+JPEG_CPPFLAGS = -I$(top_srcdir) -I$(top_builddir)/jpeg
+JPEG_LIBS = $(top_builddir)/jpeg/libjpeg.la
 
 AM_CPPFLAGS +=					\
   $(LIBPORT_CPPFLAGS)				\
-  $(JPEG6B_CPPFLAGS)				\
+  $(JPEG_CPPFLAGS)				\
   -I$(top_srcdir)/include -I$(top_builddir)
 
 AM_CXXFLAGS += $(PTHREAD_CFLAGS) $(SOCKETS_CFLAGS) $(WARNING_CXXFLAGS)
@@ -32,9 +38,9 @@ AM_CPPFLAGS += $(BOOST_CPPFLAGS)
 # To be linked in all the executables (urbi-launch, examples/ etc.).
 AM_LDADD =					\
   liburbi/liburbi.la				\
-  $(top_builddir)/jpeg-6b/libjpeg.la		\
+  $(JPEG_LIBS)					\
   $(PTHREAD_LIBS)				\
-  $(top_builddir)/libport/lib/libport/libport.la
+  $(LIBPORT_LIBS)
 
 include libuco/local.mk
 include liburbi/local.mk
